fixing external card page layout issue and mini card item issue

--- a/src/assets/css/indi.css
+++ b/src/assets/css/indi.css
@@ -940,6 +940,7 @@ body.indi-app:not(.indi-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .indi-app .indi-ext-card-item-wrapper .indi-card-upload-picture-img {
   height: 150px;
+  width: 150px;
 }
 
 .indi-app .indi-table-img-cell {
